# Swanium

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/rules/: core-crate.md  rust.md
.claude/skills/check/: SKILL.md
.claude/skills/hw-component/: SKILL.md
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml  publish-release-assets.yml
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs  resample.rs  stream.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  logging.rs
crates/core/: Cargo.toml
crates/core/benches/: frame.rs
crates/core/examples/: ct_probe.rs  profile.rs
crates/core/src/: keypad.rs  lib.rs  model.rs  profile.rs  system.rs
crates/core/src/apu/: mod.rs  tests.rs
crates/core/src/bus/: cart.rs  mod.rs  tests.rs
crates/core/src/bus/cart/: eeprom.rs  header.rs  mod.rs  rtc.rs  tests.rs
crates/core/src/cpu/: alu_ops.rs  bit_ops.rs  bus.rs  ctrl_ops.rs  decode.rs  flags.rs  mod.rs  registers.rs  timing.rs
crates/core/src/cpu/tests/: alu.rs  bit_ops.rs  ctrl_flow.rs  mod.rs  mov_stack.rs  segment_string.rs  v30_extensions.rs
crates/core/src/ppu/: mod.rs  palette.rs  tests.rs
crates/core/tests/: apu_render.rs  cartridge_mapper_tests.rs  color_render.rs  cpu_test_roms.rs  pcm_fixture.rs  ppu_render.rs  public_roms.rs  system_frame.rs
crates/frontend/: Cargo.toml  build.rs
crates/frontend/src/: emulation.rs  keymap.rs  main.rs
crates/frontend/ui/: about.slint  app.slint  settings.slint
crates/input/: Cargo.toml
crates/input/src/: gamepad.rs  lib.rs
crates/video/: Cargo.toml
crates/video/src/: lib.rs
docs/dev/: AudioAccuracy.md  Blueprint.md  ClockTowerSpriteArtifactInvestigation.md  CompatibilityMatrix.md  DevelopmentPlan.md  EmulationBacklog.md  EmulationPlan.md  FrontendAudioDropoutInvestigation.md  Profiling.md  README.md  RemainingWork.md  Status.md  V30MZ-Timing.md
docs/dev/archive/: EmulationBacklog.md  README.md
packaging/linux/: swanium.desktop
scripts/: build-linux-app.sh  build-macos-app.sh  build-windows-app.ps1
tests/: README.md
tests/fixtures/cpu/public/: .gitignore
