[package]
name = "swanium-core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
# Compile in the per-subsystem frame profiler (crate::profile). Off by default
# so a normal build has zero profiling overhead and stays fully deterministic.
profiling = []

[dependencies]
common = { path = "../common" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "frame"
harness = false

[[example]]
name = "profile"
required-features = ["profiling"]
