[package]
name = "swanium-core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
# Compile in the per-subsystem frame profiler (crate::profile). Off by default
# so a normal build has zero profiling overhead and stays fully deterministic.
profiling = []

[dependencies]
common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", default-features = false, features = ["serde", "alloc"] }
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "frame"
harness = false

[[example]]
name = "profile"
required-features = ["profiling"]
