[package]
name = "frontend"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
common = { path = "../common" }
swanium-core = { path = "../core" }
video = { path = "../video" }
audio = { path = "../audio" }
input = { path = "../input" }
tracing = "0.1"
slint = "1"
