[package]
name = "frontend"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
common = { path = "../common" }
swanium-core = { path = "../core" }
video = { path = "../video" }
audio = { path = "../audio" }
input = { path = "../input" }
tracing = "0.1"
slint = "1"
rfd = { version = "0.17.2", default-features = false, features = ["xdg-portal", "pollster"] }
