[package]
name = "frontend"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "A cross-platform WonderSwan / WonderSwan Color emulator."
license = "MIT"

[lints]
workspace = true

[dependencies]
common = { path = "../common" }
swanium-core = { path = "../core" }
video = { path = "../video" }
audio = { path = "../audio" }
input = { path = "../input" }
tracing = "0.1"
slint = "1"
rfd = { version = "0.17.2", default-features = false, features = ["xdg-portal", "pollster"] }

[build-dependencies]
slint-build = "1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[package.metadata.deb]
name = "swanium"
depends = "$auto"
maintainer = "Bubio"
section = "games"
priority = "optional"
copyright = "2026 Bubio"
assets = [
    ["../../target/release/frontend", "usr/bin/swanium", "755"],
    ["../../packaging/linux/swanium.desktop", "usr/share/applications/swanium.desktop", "644"],
    ["../../assets/icons/AppIcon.png", "usr/share/icons/hicolor/512x512/apps/swanium.png", "644"],
    ["../../LICENSE", "usr/share/doc/swanium/copyright", "644"],
]

[package.metadata.generate-rpm]
name = "swanium"
assets = [
    { source = "../../target/release/frontend", dest = "/usr/bin/swanium", mode = "755" },
    { source = "../../packaging/linux/swanium.desktop", dest = "/usr/share/applications/swanium.desktop", mode = "644" },
    { source = "../../assets/icons/AppIcon.png", dest = "/usr/share/icons/hicolor/512x512/apps/swanium.png", mode = "644" },
    { source = "../../LICENSE", dest = "/usr/share/doc/swanium/LICENSE", mode = "644" },
]
